Thu Oct 21 18:25:12  UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_linux_pgi.GNU:
        * ace/config-linux-common.h:
        * ace/config-lite.h:
          Changes to support the Portland Group PGI High-Performance
          Compiler on Linux. This is just a first checkin, a new build
          has been setup and the port to this compiler will be done the
          next months, in case you want to know more, look at www.pgroup.com
          for the compiler details

Thu Oct 21 12:32:52 2004  Chad Elliott  <elliott_c@ociweb.com>

        * ACEXML/common/AttributesImpl.h:

          Fixed doxygen errors dealing with the use of @var in a single line
          comment.

Thu Oct 21 09:12:32 2004  Chad Elliott  <elliott_c@ociweb.com>

        * bin/tao_other_tests.lst:

          No Notification Service test can be run when mimimum_corba is
          enabled.

Thu Oct 21 08:43:57 2004  Chad Elliott  <elliott_c@ociweb.com>

        * ace/OS_NS_Thread.cpp:

          Corrected the mismatched ACE_TRACE macros.

Wed Oct 20 14:53:19 2004  Steve Huston  <shuston@riverace.com>

        * ace/OS_main.h: For WinCE, don't intersperse a call to an ace_os_...
          function. Just set up a ACE_Main object and call its run() method.
          Fixed the run() method on WinCE to take the command line args
          that WinMain gets on CE.

Wed Oct 20 10:42:22 2004  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/config/ftserverorb.mpb:

          The ftserverorb base project needs to inherit from portablegroup
          to get the required settings (since TAO_FT_ServerORB depends on
          TAO_PortableGroup and TAO_Messaging).

Tue Oct 19 20:42:06 2004  Dale Wilson  <wilson_d@ociweb.com>

        * ace/OS_NS_Thread.inl:
          Missed this file in my previous check in.

Tue Oct 19 17:04:19 2004  Steve Huston  <shuston@riverace.com>

        * tests/Multicast_Test.cpp: Explicitly specify PF_INET when creating