@@ -66,7 +66,9 @@
 #define ACE_LACKS_STRRECVFD
 #define ACE_HAS_CPLUSPLUS_HEADERS
 
-#define ACE_HAS_TEMPLATE_TYPEDEFS
+#if (_MSC_VER >= 1310)
+#  define ACE_HAS_TEMPLATE_TYPEDEFS
+#endif
 #define ACE_TEMPLATES_REQUIRE_SOURCE
 #define ACE_HAS_TEMPLATE_SPECIALIZATION
 
