@@ -1,3 +1,15 @@
+Thu Oct 21 18:23:19 2004  Steve Huston  <shuston@riverace.com>
+
+	* ace/config-win32-msvc-7.h: ACE_HAS_TEMPLATE_TYPEDEFS doesn't apply
+	  to the Win64 SDK compiler (version 1300), even though it does for
+	  as MSVC 7.1 latest on Win32 (version 1310).
+
+	* ace/CDR_Base.h: Only use ACE::If_Then_Else on MSVC for VC 7.1; the
+	  Win64 SDK compiler can't hack it.
+
+	* ASNMP/tests/test_config.h (randomize): Added some static_cast to
+	  convert size_t to int. Fixes compile warnings on Win64.
+
 Thu Oct 21 18:25:12  UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * include/makeinclude/platform_linux_pgi.GNU:
